chore: Update Kubernetes module
- Update Kubernetes Fabric8 client to 6.10.0
- Enable Kubenretes module integration tests
- Use K8s mock webserver in integration tests